<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.administrator.eactivity.EdActivity"
    tools:showIn="@layout/activity_ed"
    android:background="@drawable/background">



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/TouToSend"
        android:background="@drawable/sendbutton"
        android:layout_alignParentTop="true"
        android:textSize="28sp"
        android:layout_marginLeft="240dp"
        android:textColor="@color/SeB" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/toer"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorAccent"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/receivers"
        android:id="@+id/button"
        android:layout_alignBottom="@+id/textView"
        android:layout_marginLeft="70dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/mainidea"
        android:id="@+id/textMainidea1"
        android:layout_marginTop="85dp"
        android:textColor="@color/SendBackG"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextMain"
        android:hint="@string/MainideaHint"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/time"
        android:id="@+id/textTime"
        android:layout_marginTop="115dp"
        android:textColor="@color/SendBackG"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextTime"
        android:hint="@string/TimeHint"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textbody"
        android:id="@+id/textBody"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="215dp"
        android:textColor="@color/SendBackG"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextBody"
        android:layout_marginTop="200dp"
        android:hint="@string/BodyHint"
        android:layout_marginLeft="30dp"
        android:maxLines="7"/>


</RelativeLayout>
